# defog-detection-benchmark

./: .gitignore  .gitmodules  LICENSE  README.md
eval/object_detection/: .gitignore  README.md  dataset_analysis.py  filters.py  log_analysis.py  paper.pages  parse_evaluation_results.py  pyproject.toml  realcase.py  tableConvert.com_w6snb5.numbers
eval/qualitative/: README.md  create_correlation_graph.py  metrics_demo.py  nano_bananna.py  post_process_data.py  requirments.yaml  run_post_process_pipeline.py  survey_post_process.py  visualize_results.py  vlm_judge_pipeline.py
eval/qualitative/config/: keys.py
eval/qualitative/models/: ScoreOutput.py
eval/qualitative/pipeline/: README.md  __init__.py  azure_setup.py  cli.py  config.py  data_loader.py  image_processor.py
eval/qualitative/scripts/: find_mising.py  find_repeats.py  find_union_of_images.py  get_100_keys.py  remove_duplicates.py
eval/qualitative/scripts/postprocess/: plot_mapvsqual.py  post_process.py  post_process_data.py
eval/qualitative/tools/: create_json.py  difficulty.py  filename_parser.py  helpers.py  image_editing.py  io.py  lpips.py  pipeline_helpers.py  ssim.py  visualization_utils.py
eval/qualitative/tools/db/: persitence.py
eval/qualitative/tools/gpt_endpoint/: gpt_tool_azure.py
eval/segmentation/: run_evaluation.py  run_mask2former.py
training/controlnet/: dataset_gen.py  run_xl.sh  train_controlnet.py
zeroshot/: README.md  defog_main.py
